<resources>
    <string name="app_name">Proyecto Surf</string>
    <string name="act1_name">Actividad de Inicio</string>
    <string name="act2_name">Actividad de Contacto</string>
    <string name="act3_name">Actividad Cesta Compra</string>
    <string name="act4_name">Actividad Lista Patrocinadores</string>
    <string name="act1_tit_texto">Patrocinadores</string>
    <string name="act1_anim_texto">¡Pronto se abrirá la reserva de plazas para el nuevo Surfcamp de verano!</string>
    <string name="act2_correo_texto">Correo electrónico</string>
    <string name="act2_nombre_texto">Nombre</string>
    <string name="act2_asunto_texto">Asunto</string>
    <string name="act2_mensaje_texto">Mensaje</string>
    <string name="act2_terminos_texto">Acepto los Términos y Condiciones.</string>
    <string name="act2_terminos_dialogo">Términos y Condiciones</string>
    <string name="act2_boton_texto">Enviar Mensaje</string>
    <string name="act2_dialogo_tit">Contacto</string>
    <string name="btn_positivo_texto">Aceptar</string>
    <string name="btn_negativo_texto">Cancelar</string>
    <string name="error_correo">Correo electrónico inválido</string>
    <string name="error_nombre">Nombre obligatorio</string>
    <string name="error_asunto">Asunto obligatorio</string>
    <string name="error_mensaje">Mensaje obligatorio</string>
    <string name="act2_envform_texto">Mensaje enviado correctamente</string>
    <string name="act2_menu_atras">Atrás</string>
    <string name="act1_menu_salir">Salir</string>
    <string name="act1_menu_about">About</string>
    <string name="act1_menu_cesta">Cesta Compra</string>
    <string name="act1_menu_patrocinadores">Patrocinadores</string>
    <string name="dialogo_about_mensaje">Acerca de la Aplicación:\n\nProyecto Surf\nAplicación para el Proyecto de la 1º Evaluación\nVersión: 1.0\n\nJuan Francisco Sánchez González</string>
    <string name="act2_cadena_error">Faltan por introducir los siguientes campos obligatorios:\n\n</string>
    <string name="dialogo_salir_mensaje">¿Desea salir de la aplicación?</string>
    <string name="act3_producto_texto">Producto</string>
    <string name="act3_cantidad_texto">Cantidad</string>
    <string name="act3_precio_texto">Precio</string>
    <string name="act3_totalcesta_texto">Lista de la compra:</string>
    <string name="act3_error_toast">El Producto es obligatorio</string>
    <string name="act3_menu_eliminar">Eliminar</string>
    <string name="act3_dialogo_tit">Eliminar Producto</string>
    <string name="act3_dialogo_texto">¿Desea eliminar el prodcto de la lista?</string>
</resources>